remove stable flickering, fixes #1557

--- a/public/css/inventory.styl
+++ b/public/css/inventory.styl
@@ -36,6 +36,10 @@
     width:6.5em
     height:2.5em
 
+menu.pets div 
+  display: inline-block
+  padding-top: -30px
+
 .current-pet
     left: 0px
     bottom: 0px
